# snowflake-bounce

./: Cargo.toml  README.md  demo.tape  flake.nix  result
assets/: demo.webm
docs/: arch-bounce.cast  snowflake-bounce.cast
src/: lib.rs  main.rs
