[package]
name = "snowflake-bounce"
version = "0.1.2"
edition = "2024"
authors = ["T.Sawyer <saylesss87@proton.me>"]
description = "A bouncing NixOS snowflake screensaver"
license = "Apache-2.0"
repository = "https://github.com/saylesss88/snowflake-bounce"
readme = "README.md"
keywords = ["rust", "terminal"]
homepage = "https://github.com/saylesss88/rmatrix-snowfall"
exclude = [
	"result",
	"docs",
	"demo.gif",
	".github/",
	".gitignore",
	"flake.nix",
	"flake.lock",
]

[dependencies]
pancurses = {version = "0.17", default-features = false, features = ["wide"]}
rand = {version = "0.8", default-features = false, features = [
	"small_rng",
	"std",
]}
signal-hook = {version = "0.4", default-features = false}
term_size = "0.3"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
