[package]
name = "snowflake-bounce"
version = "0.2.4"
edition = "2024"
authors = ["T.Sawyer <saylesss87@proton.me>"]
description = "A bouncing NixOS snowflake screensaver"
license = "Apache-2.0"
repository = "https://github.com/saylesss88/snowflake-bounce"
readme = "README.md"
keywords = ["rust", "terminal"]
homepage = "https://github.com/saylesss88/snowfall-bounce"
exclude = [
	"result",
	"docs",
	".github/",
	".gitignore",
	"flake.nix",
	"flake.lock",
]

[dependencies]
crossterm = "0.29.0"
rand = {version = "0.8.5", default-features = false, features = [
	"small_rng",
	"std",
]}
term_size = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
debug = false
